--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,20 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div class="container">
+<div class="navbar navbar-fixed-top">
+  <a class="navbar-brand" href="#">Treebook</a>
+  <ul class="nav navbar-nav">
+    <li><%= link_to "All Statuses", statuses_path %></li>
+    <li><a href="#">Link</a></li>
+  </ul>
+</div></div>
+
+
+	<div class="container">
 
 <%= yield %>
-
+<em>Footer</em>
+</div>
 </body>
 </html>
